# cpsc312-project2

./: .gitignore  LICENSE  README.md  cpsc312-project2.cabal
app/: Main.hs
src/: Lib.hs  Main.hs
test/: Spec.hs
