name:                cpsc312-project2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kaitian-xie/cpsc312-project2#readme
license:             BSD3
license-file:        LICENSE
author:              Kaitian Xie
maintainer:          xkaitian@gmail.com
copyright:           2017 Kaitian Xie
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable solve-sudoku
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, matrix
