name:                cpsc312-project2
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/kaitian-xie/cpsc312-project2#readme
license:             BSD3
license-file:        LICENSE
author:              Kaitian Xie
maintainer:          xkaitian@gmail.com
copyright:           2017 Kaitian Xie
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/kaitian-xie/cpsc312-project2#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable solve-sudoku
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cpsc312-project2
  default-language:    Haskell2010

test-suite solve-sudoku-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cpsc312-project2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kaitian-xie/cpsc312-project2
